--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec node -r dotenv/config ./src/index.js",
-    "build": "node -r dotenv/config ./src/index.js"
+    "build": "node -r dotenv/config ./src/index.js",
+    "test-docs": "node ./src/index.js"
   },
   "author": "Andela Simulations Programme",
   "license": "MIT",
@@ -24,10 +25,12 @@
     "methods": "^1.1.2",
     "mongoose": "^5.2.2",
     "mongoose-unique-validator": "^2.0.1",
+    "morgan": "^1.9.1",
     "nodemon": "^1.19.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "request": "^2.87.0",
+    "swagger-ui-express": "^4.1.2",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
