--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     ]
   },
   "scripts": {
-    "test": "set NODE_ENV=test && nyc mocha src/tests/*.js --require @babel/register",
+    "test": "set NODE_ENV=test && npm run build && nyc mocha ./dist/tests",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "start": "node -r dotenv/config dist/index.js",
     "migrate": "npx sequelize-cli db:migrate",
@@ -35,7 +35,6 @@
     "jsonwebtoken": "^8.3.0",
     "method-override": "^2.3.10",
     "methods": "^1.1.2",
-    "mocha": "^6.2.2",
     "mongoose": "^5.2.2",
     "mongoose-unique-validator": "^2.0.1",
     "morgan": "^1.9.1",
@@ -45,10 +44,10 @@
     "pg": "^7.12.1",
     "request": "^2.87.0",
     "sequelize": "^5.21.2",
-    "underscore": "^1.9.1",
-    "winston": "^3.2.1",
     "swagger-jsdoc": "^3.4.0",
-    "swagger-ui-express": "^4.1.2"
+    "swagger-ui-express": "^4.1.2",
+    "underscore": "^1.9.1",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
@@ -66,7 +65,15 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "nyc": "^14.1.1",
+    "lint-staged": "^9.4.2",
     "mocha": "^6.2.2",
-    "nyc": "^14.1.1"
+    "husky": "^3.0.9"
+  },
+  "lint-staged": {
+    "src/**/*.js": [
+      "npm run lint",
+      "git add"
+    ]
   }
 }
