--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
       "src/services/files.service.js",
       "src/utils/echo.util.js",
       "src/routes/index.js",
-      "src/app.js"
+      "src/app.js",
+      "src/services/stripe.js"
     ]
   },
   "scripts": {
@@ -54,6 +55,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "nodemon": "^1.19.4",
+    "on-finished": "^2.3.0",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
@@ -65,12 +67,12 @@
     "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1",
     "socket.io": "^2.3.0",
+    "stripe": "^8.18.0",
     "supertest": "^4.0.2",
     "swagger-jsdoc": "^3.4.0",
     "swagger-ui-express": "^4.1.2",
     "underscore": "^1.9.1",
-    "winston": "^3.2.1",
-    "on-finished": "^2.3.0"
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "form-data": "^3.0.0",
