--- a/package.json
+++ b/package.json
@@ -63,11 +63,13 @@
     "passport-local": "^1.0.0",
     "pg": "^7.12.1",
     "pug": "^2.0.4",
+    "qrcode": "^1.4.4",
     "request": "^2.87.0",
     "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1",
     "socket.io": "^2.3.0",
     "stripe": "^8.18.0",
+    "speakeasy": "^2.0.0",
     "supertest": "^4.0.2",
     "swagger-jsdoc": "^3.4.0",
     "swagger-ui-express": "^4.1.2",
